# robocam

./: .gitignore  README
projects/ctrl-board/software/: CMakeLists.txt  config-win.cmake
projects/ctrl-board/software/3dparty/: CMakeLists.txt
projects/ctrl-board/software/3dparty/luabitop-1.0.2/: CMakeLists.txt  bit.c  bit.h
projects/ctrl-board/software/3dparty/qxmpp/: CMakeLists.txt  vpx.cmake
projects/ctrl-board/software/applications/: CMakeLists.txt
projects/ctrl-board/software/applications/client/: CMakeLists.txt
projects/ctrl-board/software/applications/host/: CMakeLists.txt
projects/ctrl-board/software/ctrlboard/src/: ctrlboard.h
projects/ctrl-board/software/luactrlboard/src/: luactrlboard.cpp  luactrlboard.h
projects/ctrl-board/software/tests/: CMakeLists.txt
projects/ctrl-board/software/tests/sock_in/: CMakeLists.txt
projects/ctrl-board/software/tests/sock_out/: CMakeLists.txt
projects/ctrl-board/software/tests/voiptest/: CMakeLists.txt
projects/ctrl-board/software/xmpp_io/: CMakeLists.txt  win32_opencv.cmake
projects/ctrl-board/software/xmpp_server/: CMakeLists.txt
projects/irc_tests/: CMakeLists.txt  CMakeLists.txt.user.2.6pre1  config-linux.cmake  config-win.cmake
projects/irc_tests/3dparty/: CMakeLists.txt
projects/irc_tests/3dparty/gloox-1.0/: Makefile  config.h.unix  config.status  gloox-config  gloox.pc  libtool  stamp-h1
projects/irc_tests/3dparty/qca-2.0.3/: configure
projects/irc_tests/3dparty/qxmpp-0.7.3/: CMakeLists.txt  qxmpp.pri
projects/irc_tests/3dparty/qxmpp-0.7.4/: CMakeLists.txt
projects/irc_tests/app_client/: CMakeLists.txt
projects/irc_tests/app_client/src/: main_wnd.cpp  main_wnd.h  main_wnd.ui
projects/irc_tests/app_client/src_lua/: client.ini  client.lua
projects/irc_tests/app_host/: CMakeLists.txt
projects/irc_tests/app_host/src/: fsw_process.cpp  fsw_process.h  luaprocess.cpp  luaprocess.h  main.cpp
projects/irc_tests/app_host/src_lua/: config.ini  host.ini  host.lua  main.lua
projects/irc_tests/ctrlboard/: CMakeLists.txt
projects/irc_tests/ctrlboard/src/: ctrlboard.cpp  ctrlboard.h
projects/irc_tests/ircctrl/: CMakeLists.txt
projects/irc_tests/ircctrl/src/: irc_peer.cpp  irc_peer.h  peer_abst.cpp  peer_abst.h  peer_irc.cpp  peer_irc.h  xmpp_peer.cpp  xmpp_peer.h
projects/irc_tests/luactrlboard/: CMakeLists.txt
projects/irc_tests/luactrlboard/src/: luactrlboard.cpp
projects/irc_tests/luamcuctrl/: CMakeLists.txt
projects/irc_tests/luamcuctrl/src/: luamcuctrl.cpp
projects/irc_tests/mcuctrl/: CMakeLists.txt
projects/irc_tests/mcuctrl/src/: mcu_ctrl.cpp  mcu_ctrl.h  usb_io.cpp
projects/irc_tests/peer_abst/: CMakeLists.txt
projects/irc_tests/peer_abst/src/: peer_abst.cpp  peer_abst.h
projects/irc_tests/peer_qxmpp/: CMakeLists.txt
projects/irc_tests/peer_qxmpp/src/: host_qxmpp.cpp  peer_qxmpp.cpp  peer_qxmpp.h  qxmpp_peer.cpp  qxmpp_peer.h  qxmpp_video.cpp  qxmpp_video.h
projects/irc_tests/test/: CMakeLists.txt
projects/irc_tests/test/src/: main.cpp  wgt.cpp  wgt.h  wgt.ui
projects/irc_tests/tests/: CMakeLists.txt
projects/irc_tests/tests/mcuctrl_test/: CMakeLists.txt
projects/irc_tests/tests/qxmpp_test/: CMakeLists.txt
projects/irc_tests/tests/qxmpp_transfer_test/: CMakeLists.txt
projects/irc_tests/tests/xmpp_test/: CMakeLists.txt
projects/irc_tests/xmpp_server/: CMakeLists.txt
projects/irc_tests/xmpp_server/src_lua/: server.ini
projects/openwrt/rpc/client_gui/: CMakeLists.txt  settings.cmake  settings_unix.cmake  settings_win32.cmake
projects/software/: CMakeLists.txt  build_all  cross_openwrt.txt  settings.unix.cmake  settings.win32.cmake
projects/software/client/: CMakeLists.txt
projects/software/client/src/: cam_ice.cpp  cam_ice.h  camera.cpp  camera.h  camera.ui  chat.cpp  chat.h  chat.ui  chat_ice.cpp  chat_ice.h  client_ice.cpp  client_ice.h  client_ice_thread.cpp  client_ice_thread.h  client_list.cpp  client_list.h  client_list.ui  connect.cpp  connect.h  connect.ui  main.cpp  main_wnd.cpp  main_wnd.h  main_wnd.ui  moto.cpp  moto.h  moto.ui  moto_ice.cpp  moto_ice.h  sudo.cpp  sudo.h  sudo.ui
projects/software/hdw/: CMakeLists.txt  Makefile
projects/software/hdw/src/: cam_ice.cpp  cam_ice.h  config.cfg  hdw.sh  hdw_ice.cpp  hdw_ice.h  main.cpp  moto_ice.cpp  moto_ice.h
projects/software/host/: CMakeLists.txt
projects/software/host/src/: cam_ctrl.cpp  cam_ctrl.h  cam_ctrl_eml.cpp  cam_ctrl_eml.h  cam_ctrl_hdw.cpp  cam_ctrl_hdw.h  cam_ctrl_ice.cpp  cam_ctrl_ice.h  cam_super_ice.cpp  cam_super_ice.h  cam_thread_eml.cpp  cam_thread_eml.h  cam_thread_hdw.cpp  cam_thread_hdw.h  cam_view_ice.cpp  cam_view_ice.h  dec.cpp  dec.h  host_ice.cpp  host_ice.h  host_ice_thread.cpp  host_ice_thread.h  host_tray.cpp  host_tray.h  images.qrc  main.cpp  moto_ctrl.cpp  moto_ctrl.h  moto_ctrl_eml.cpp  moto_ctrl_eml.h  moto_ctrl_hdw.cpp  moto_ctrl_hdw.h  moto_ctrl_ice.cpp  moto_ctrl_ice.h  moto_super_ice.cpp  moto_super_ice.h  moto_thread_hdw.cpp  moto_thread_hdw.h  moto_view_ice.cpp  moto_view_ice.h
projects/software/ice/: client.ice  hdw.ice  host.ice  types.ice
projects/software/ice/unix/: client.cpp  client.h  generate.sh  hdw.cpp  hdw.h  host.cpp  host.h  types.cpp  types.h
projects/software/ice/win/: client.cpp  client.h  generate.cmd  hdw.cpp  hdw.h  host.cpp  host.h  types.cpp  types.h
projects/software/installer/: installer.iss
projects/software/lib-ijg/: CMakeLists.txt
projects/software/lib-ijg/jpeg-8c/: Makefile  config.status  libtool
projects/software/lib-qslog/: CMakeLists.txt
projects/software/lib-usbio/: CMakeLists.txt
projects/software/lib-usbio/src/: moto_ctrl.cpp  moto_ctrl.h  usb_io.cpp  usb_io.h
projects/software/lib-v4l/: CMakeLists.txt
projects/software/lib-v4l/src/: cam_ctrl.cpp  cam_ctrl.h
projects/software/lib-v4l/src_windows/: cam_ctrl.cpp  cam_ctrl.h
projects/software/proxy/: CMakeLists.txt
projects/software/proxy/src/: main.cpp  proxy.cpp  proxy.h  tray.cpp  tray.h
projects/software/test-usbio/: CMakeLists.txt
projects/software/test-usbio/src/: main.cpp  usb_ctrl.cpp  usb_ctrl.h  usb_ctrl.ui
(+1544 files in other folders)
