
cmake_minimum_required( VERSION 2.6 )
project( "robocam" )
set( ROOT ${CMAKE_CURRENT_SOURCE_DIR} )
set( CMAKE_INSTALL_PREFIX ${ROOT}/build.app )
if ( WIN32 )
    include( "./config-win.cmake" )
elseif ( UNIX )
    include( "./config-linux.cmake" )
endif ( WIN32 )
add_subdirectory( "./3dparty" )
add_subdirectory( "./peer_abst" )
add_subdirectory( "./peer_qxmpp" )
add_subdirectory( "./xmpp_server" )
#add_subdirectory( "./mcuctrl" )
#add_subdirectory( "./luamcuctrl" )
add_subdirectory( "./app_client" )
if ( UNIX )
    add_subdirectory( "./app_host" )
    add_subdirectory( "./ctrlboard" )
    add_subdirectory( "./luactrlboard" )
endif ( UNIX )
add_subdirectory( "./tests" )
